--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
     <head>
         <title>#{get 'title' /}</title>
-        <meta charset="${_response_encoding}">
+        <meta charset="utf-8">
+        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/tron-ui.min.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
+        <link rel="shortcut icon" type="image/png" href="@{'/public/images/highrise-fav.ico'}">
         #{get 'moreStyles' /}
-        <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
     </head>
     <body>
         #{doLayout /}
 
-        <script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script src="@{'/public/javascripts/tron-ui.js'}" type="text/javascript"></script>
+        <script src="@{'/public/javascripts/bootstrap.min.js'}" type="text/javascript"></script>
         #{get 'moreScripts' /}
     </body>
 </html>
